# zenopanel

./: .env.example  .gitignore  Cargo.toml  README.md  ZENOLANG_STYLE_GUIDE.md  compile.md  compile.sh  development.md  diff.txt  diff_schema.txt  go.mod  go.sum  install.md  install.sh  note.md  plan.md  plan_api_gateway.md  test-perm-temp.txt
DOCS/: package-lock.json  package.json  research_notes.md  weaknesses_analysis.md
DOCS/docs/: index.md
backup/examples/: sidecar_stability_test.zl
benchmark/: run_bench.go
benchmark/go_server/: main.go
certs/: acme_account.json  default.crt  default.key  localhost.crt  localhost.key  zeno-acme-test.myname.com.crt  zeno-acme-test.myname.com.key
cmd/zeno/: zeno.go
internal/app/: context.go  registry.go  router.go
internal/cli/: check.go  key_generate.go  make_auth.go  migrate.go  new.go  rollback.go  run.go  test.go  version.go
internal/console/: server.go
internal/slots/: aspnet.go  aspnet_test.go  auth.go  auth_test.go  cache.go  cache_test.go  captcha.go  captcha_test.go  collections.go  collections_test.go  container_bridge.go  container_bridge_test.go  database.go  database.go.bk  database_test.go  db_hooks.go  filesystem.go  filesystem_overwrite_test.go  filesystem_test.go  functions.go  functions_test.go  http.go  http_client.go  http_client_test.go  http_test.go  image.go  image_test.go  inertia.go  inertia_test.go  job.go  job_test.go  json.go  json_test.go  mail.go  mail_test.go  math.go  math_test.go  meta.go  meta_test.go  network.go  (+32 more)
modul/zeno-container/: README.md  go.mod  go.sum
pkg/analysis/: analyzer.go
pkg/apidoc/: registry.go
pkg/blade/: blade.go  blade_extends_test.go  blade_native_advanced_loop_test.go  blade_native_auth_json_test.go  blade_native_can_test.go  blade_native_component_test.go  blade_native_conditionals_test.go  blade_native_error_test.go  blade_native_extends_test.go  blade_native_features_test.go  blade_native_for_test.go  blade_native_include_test.go  blade_native_laravel_features_test.go  blade_native_ldx_test.go  blade_native_loop_test.go  blade_native_push_test.go  blade_native_switch_test.go  blade_native_test.go  blade_native_unclosed_test.go  blade_utils_test.go  blade_xss_test.go  (+1 more)
scratch/: add_test_rule.py  check_db_schema.py  check_db_servers.py  check_settings_api.py  debug_api.py  reproduce_db_install.py  test_8080.py  test_acme_ssl.py  test_auth.py  test_box_api.py  test_chmod.py  test_compose_native.sh  test_dynamic_port_proxy.py  test_get_logs.py  test_install.py  test_multi_user.py  test_ports  test_ports.rs  test_proxy_alt_domain.py  test_pull_and_create.py  test_security_observability.py  test_settings.py  test_settings_endpoint.py  test_ssl_renewal.py  test_static_hosting.py  test_streaming_loadbalancer.py  test_upload_validation.py  try_mount.py  verify.py  verify_security_menu.py  verify_targz.py
src/: auth.rs  auth_slots.rs  backupman.rs  db.rs  gateway.rs  logman.rs  main.rs  main.zl  procman.rs  proxyman.rs  routes_test.zl  slots.rs  src.7z  sslman.rs  waf.rs
views/: proxy_error.blade.zl  welcome.blade.zl  zenopanel.blade.zl
vscode-zenolang/: README.md  extension.js  language-configuration.json  package.json  smoke_test.zl  zenolang-0.1.0.vsix
zeno-rs/: Cargo.toml
zeno-rs/examples/web_server/: Cargo.toml
zeno-rs/examples/web_server/src/: main.rs
zig_wrappers/: zig-ar.sh  zig-cxx.sh  zig-linker-wrapper.sh  zig-wrapper.sh
zsrc/: main.zl
(+276 files in other folders)
