[package]
name = "zeno"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sysinfo = "0.30"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
matchit = "0.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
zenocore = "0.1.0"
zeno-blade = "0.1.0"
zeno-std = "0.1.0"
zenoengine = "0.1.0"
zip = "0.6"

