[package]
name = "zeno"
version = "0.5.0"
edition = "2024"



[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = { version = "0.4", features = ["util"] }
instant-acme = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
x509-parser = "0.16"
sysinfo = "0.30"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres"] }
matchit = "0.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
jsonwebtoken = "9.3.0"
bcrypt = "0.15"
zenocore = "0.1.0"
zeno-blade = "0.1.0"
zeno-std = "0.1.0"
zenoengine = "0.1.0"
pingora = { version = "0.8.1", features = ["openssl", "proxy"] }
openssl = "0.10"
async-trait = "0.1"
zip = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
url = "2.5"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.14"
rustls-pemfile = "2.1"
once_cell = "1.19"
regex = "1.10"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.22"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
multer = "3.1.0"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3.32"
