[package]
name = "web-server-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
zenoengine = { git = "https://github.com/nextcore/zenoengine.git", package = "zenoengine" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
